# xet-swift

./: Cargo.toml  README.md
bindings/: cxet.h
rust/: Cargo.toml  README.md  build.rs  build.sh
rust/.cargo/: config.toml
rust/src/: lib.rs
src/: lib.rs
xet-swift/: Package.swift
xet-swift/Sources/CXet/: module.modulemap
xet-swift/Sources/CXet/include/: cxet.h
xet-swift/Sources/XetSwift/: XetSwift.swift
xet-swift/Sources/xet-swift/: xet_swift.swift
xet-swift/Tests/XetSwiftTests/: XetSwiftTests.swift
