[package]
name = "xet-swift"
version = "0.1.0"
edition = "2024"

[lib]
name = "xet_sys"
crate-type = ["staticlib"]

[dependencies]
data = { git = "https://github.com/huggingface/xet-core"}
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]

[build-dependencies]
cbindgen = "0.28.0"





